--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
                 <div class="password-hint">
                     <i class="fas fa-lightbulb"></i>
-                    <span>Hint: पासवर्ड है "जिज्ञासा123"</span>
+                    <span>Hint: password "kya hai"</span>
                 </div>
                 
                 <button class="btn-password-submit" id="passwordSubmit">
