--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>जिज्ञासा - सुरक्षित फाइल शेयर</title>
+    <title>jigyasa - safe and secure</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.min.css">
@@ -15,7 +15,7 @@
         <div class="password-container">
             <div class="password-logo">
                 <i class="fas fa-lock"></i>
-                <h1>जिज्ञासा</h1>
+                <h1>jigyasa</h1>
                 <p class="password-subtitle">सुरक्षित फाइल शेयर सिस्टम</p>
             </div>
             
@@ -142,8 +142,8 @@
         <header class="hero">
             <div class="hero-container">
                 <div class="hero-text">
-                    <h1><i class="fas fa-shield-alt"></i> जिज्ञासा - सुरक्षित फाइल शेयर</h1>
-                    <p>PDF, Word, Excel, PPT, TXT, Images - सभी फाइलें सुरक्षित रूप से अपलोड करें और शेयर करें</p>
+                    <h1><i class="fas fa-shield-alt"></i> jigyasa file system</h1>
+                    <p>PDF, Word, Excel, PPT, TXT, Images - all files are saved for 30 days and will be deleted after 30 days</p>
                     <div class="storage-meter">
                         <div class="meter-bar">
                             <div class="meter-fill" id="storageMeter"></div>
